// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpandCollapse renders a closed panel 1`] = `
<ExpandCollapse
  open={Array []}
>
  <Panels
    isPanelOpen={[Function]}
    open={Array []}
    togglePanel={[Function]}
  >
    <div
      className="base"
      open={Array []}
    >
      <HairlineDivider
        gradient={false}
        key="1"
        vertical={false}
      >
        <hr
          className="horizontalThin"
        />
      </HairlineDivider>
      <PanelWrapper
        key=".0"
        onClick={[Function]}
        open={false}
        panelDisabled={false}
        panelHeader="Panel title"
        panelId="panel-1"
      >
        <div
          data-testid="panel-1"
        >
          <Clickable
            aria-expanded="false"
            dangerouslyAddClassName="header"
            disabled={false}
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <button
              aria-expanded="false"
              className="clickable header"
              disabled={false}
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <Box
                inline={false}
                vertical={3}
              >
                <div
                  className="verticalPadding-3"
                >
                  <Box
                    between={3}
                    inline={true}
                  >
                    <div
                      className="betweenRightMargin-3 betweenRight"
                    >
                      <Translate
                        direction="y"
                        distance="0.25rem"
                        in={false}
                        timeout={300}
                      >
                        <Transition
                          appear={false}
                          enter={true}
                          exit={true}
                          in={false}
                          mountOnEnter={false}
                          onEnter={[Function]}
                          onEntered={[Function]}
                          onEntering={[Function]}
                          onExit={[Function]}
                          onExited={[Function]}
                          onExiting={[Function]}
                          timeout={300}
                          unmountOnExit={false}
                        >
                          <div
                            style={
                              Object {
                                "transition": "transform 300ms",
                              }
                            }
                          >
                            <DecorativeIcon
                              size={16}
                              symbol="caretDown"
                              variant="primary"
                            >
                              <Icon
                                aria-hidden="true"
                                size={16}
                                symbol="caretDown"
                                variant="primary"
                              >
                                <i
                                  aria-hidden="true"
                                  className="iconCaretDown primary size16"
                                />
                              </Icon>
                            </DecorativeIcon>
                          </div>
                        </Transition>
                      </Translate>
                      <Flexbox
                        dangerouslyAddClassName="headerAlign"
                        direction="row"
                      >
                        <div
                          className="row headerAlign"
                        >
                          <Box
                            between={2}
                            dangerouslyAddClassName="headerAlign"
                            inline={false}
                          >
                            <div
                              className="betweenBottomMargin-2 headerAlign"
                            >
                              <div>
                                <Text
                                  block={false}
                                  bold={false}
                                  invert={false}
                                  size="medium"
                                >
                                  <span
                                    className="medium mediumFont color"
                                  >
                                    Panel title
                                  </span>
                                </Text>
                              </div>
                            </div>
                          </Box>
                        </div>
                      </Flexbox>
                    </div>
                  </Box>
                </div>
              </Box>
            </button>
          </Clickable>
          <Reveal
            height={0}
            in={false}
            timeout={500}
          >
            <Transition
              appear={false}
              enter={true}
              exit={true}
              in={false}
              mountOnEnter={false}
              onEnter={[Function]}
              onEntered={[Function]}
              onEntering={[Function]}
              onExit={[Function]}
              onExited={[Function]}
              onExiting={[Function]}
              timeout={500}
              unmountOnExit={false}
            >
              <div
                style={
                  Object {
                    "height": 0,
                    "overflow": "hidden",
                    "transition": "height 500ms",
                  }
                }
              >
                <div>
                  <DimpleDivider>
                    <hr
                      className="dimple"
                    />
                  </DimpleDivider>
                  <Box
                    inline={false}
                    vertical={3}
                  >
                    <div
                      className="verticalPadding-3"
                    >
                      <Text
                        block={true}
                        bold={false}
                        invert={false}
                        size="base"
                      >
                        <div
                          className="base baseFont color"
                        >
                          <Panel
                            disabled={false}
                            header="Panel title"
                            id="panel-1"
                          >
                            Panel content
                          </Panel>
                        </div>
                      </Text>
                    </div>
                  </Box>
                </div>
              </div>
            </Transition>
          </Reveal>
        </div>
      </PanelWrapper>
      <HairlineDivider
        gradient={false}
        key="2"
        vertical={false}
      >
        <hr
          className="horizontalThin"
        />
      </HairlineDivider>
    </div>
  </Panels>
</ExpandCollapse>
`;

exports[`ExpandCollapse renders an open panel 1`] = `
<ExpandCollapse
  open={
    Array [
      "panel-1",
    ]
  }
>
  <Panels
    isPanelOpen={[Function]}
    open={
      Array [
        "panel-1",
      ]
    }
    togglePanel={[Function]}
  >
    <div
      className="base"
      open={
        Array [
          "panel-1",
        ]
      }
    >
      <HairlineDivider
        gradient={false}
        key="1"
        vertical={false}
      >
        <hr
          className="horizontalThin"
        />
      </HairlineDivider>
      <PanelWrapper
        key=".0"
        onClick={[Function]}
        open={true}
        panelDisabled={false}
        panelHeader="Panel title"
        panelId="panel-1"
      >
        <div
          data-testid="panel-1"
        >
          <Clickable
            aria-expanded="true"
            dangerouslyAddClassName="header"
            disabled={false}
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <button
              aria-expanded="true"
              className="clickable header"
              disabled={false}
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <Box
                inline={false}
                vertical={3}
              >
                <div
                  className="verticalPadding-3"
                >
                  <Box
                    between={3}
                    inline={true}
                  >
                    <div
                      className="betweenRightMargin-3 betweenRight"
                    >
                      <Translate
                        direction="y"
                        distance="-0.25rem"
                        in={false}
                        timeout={300}
                      >
                        <Transition
                          appear={false}
                          enter={true}
                          exit={true}
                          in={false}
                          mountOnEnter={false}
                          onEnter={[Function]}
                          onEntered={[Function]}
                          onEntering={[Function]}
                          onExit={[Function]}
                          onExited={[Function]}
                          onExiting={[Function]}
                          timeout={300}
                          unmountOnExit={false}
                        >
                          <div
                            style={
                              Object {
                                "transition": "transform 300ms",
                              }
                            }
                          >
                            <DecorativeIcon
                              size={16}
                              symbol="caretUp"
                              variant="primary"
                            >
                              <Icon
                                aria-hidden="true"
                                size={16}
                                symbol="caretUp"
                                variant="primary"
                              >
                                <i
                                  aria-hidden="true"
                                  className="iconCaretUp primary size16"
                                />
                              </Icon>
                            </DecorativeIcon>
                          </div>
                        </Transition>
                      </Translate>
                      <Flexbox
                        dangerouslyAddClassName="headerAlign"
                        direction="row"
                      >
                        <div
                          className="row headerAlign"
                        >
                          <Box
                            between={2}
                            dangerouslyAddClassName="headerAlign"
                            inline={false}
                          >
                            <div
                              className="betweenBottomMargin-2 headerAlign"
                            >
                              <div>
                                <Text
                                  block={false}
                                  bold={false}
                                  invert={false}
                                  size="medium"
                                >
                                  <span
                                    className="medium mediumFont color"
                                  >
                                    Panel title
                                  </span>
                                </Text>
                              </div>
                            </div>
                          </Box>
                        </div>
                      </Flexbox>
                    </div>
                  </Box>
                </div>
              </Box>
            </button>
          </Clickable>
          <Reveal
            height={0}
            in={true}
            timeout={500}
          >
            <Transition
              appear={false}
              enter={true}
              exit={true}
              in={true}
              mountOnEnter={false}
              onEnter={[Function]}
              onEntered={[Function]}
              onEntering={[Function]}
              onExit={[Function]}
              onExited={[Function]}
              onExiting={[Function]}
              timeout={500}
              unmountOnExit={false}
            >
              <div
                style={
                  Object {
                    "height": "0px",
                    "overflow": "hidden",
                    "transition": "height 500ms",
                  }
                }
              >
                <div>
                  <DimpleDivider>
                    <hr
                      className="dimple"
                    />
                  </DimpleDivider>
                  <Box
                    inline={false}
                    vertical={3}
                  >
                    <div
                      className="verticalPadding-3"
                    >
                      <Text
                        block={true}
                        bold={false}
                        invert={false}
                        size="base"
                      >
                        <div
                          className="base baseFont color"
                        >
                          <Panel
                            disabled={false}
                            header="Panel title"
                            id="panel-1"
                          >
                            Panel content
                          </Panel>
                        </div>
                      </Text>
                    </div>
                  </Box>
                </div>
              </div>
            </Transition>
          </Reveal>
        </div>
      </PanelWrapper>
      <HairlineDivider
        gradient={false}
        key="2"
        vertical={false}
      >
        <hr
          className="horizontalThin"
        />
      </HairlineDivider>
    </div>
  </Panels>
</ExpandCollapse>
`;
